# BestGhost

./: CMakeLists.txt  README.md  about.md  changelog.md  mod.json  modbak.json
.github/workflows/: multi-platform.yml
Best Ghost/: CMakeLists.txt  README.md
BestGhost-main/: CMakeLists.txt
BestGhost-main/src/hooks/: PlayLayerHook.cpp
BestGhost-main/src/ui/: GhostLibraryPopup.cpp  GhostLibraryPopup.hpp
src/: GhostData.cpp  GhostData.hpp  GhostManager.cpp  GhostManager.hpp  GhostRenderer.cpp  GhostRenderer.hpp  main.cpp
src/hooks/: LevelInfoLayerHook.cpp  LevelInfoLayerHook.hpp  PauseLayerHook.cpp  PauseLayerHook.hpp  PlayLayerHook.cpp  PlayLayerHook.hpp
src/ui/: GhostLibraryPopup.hpp
